--- a/pom.xml
+++ b/pom.xml
@@ -13,5 +13,30 @@
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-    
+
+
+    <dependencies>
+        <!-- Selenium WebDriver -->
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>4.1.0</version> <!-- Используйте последнюю доступную версию -->
+        </dependency>
+
+        <!-- Jsoup -->
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.14.3</version> <!-- Используйте последнюю доступную версию -->
+        </dependency>
+
+        <!-- WebDriver Manager (опционально) -->
+        <!-- Эта зависимость помогает автоматически управлять драйверами для браузеров -->
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>5.0.3</version> <!-- Используйте последнюю доступную версию -->
+        </dependency>
+    </dependencies>
+
 </project>
